--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <div class="project-content">
         <h1>PasswordDB</h1>
         <img src="./imgs/project2.png">
-        <p>This website stores account information for a user. A user can signup and can enter the name of the account, username / email, and password. This site can also generate strong passwords for you if needed. This project uses Express.js, EJS, Bcrypt, and MongoDB.</p>
+        <p>This website provides an interactive visualization on various sorting algorthms. Currently the supported algorthms are: Quick Sort, Merge Sort, Bubble Sort and Selection Sort with plans to add more in the future!</p>
         <div class="project-links">
-          <button type="button" class="link"><a href="http://password-db-app.herokuapp.com/" target="_blank">View Live</a></button>
-          <button type="button" class="link"><a href="https://github.com/ItsMikeyy/PasswordDB" target="_blank">View On Github</a></button>
+          <button type="button" class="link"><a href="https://itsmikeyy.github.io/SortingAlgorithmsVisualized/" target="_blank">View Live</a></button>
+          <button type="button" class="link"><a href="https://github.com/ItsMikeyy/SortingAlgorithmsVisualized/tree/master" target="_blank">View On Github</a></button>
         </div>
       </div>
 
