--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="home" class="home">
       <div class="content">
         <h2>MICHAEL CAREY</h2>
-        <p>An aspiring fullstack developer</p>
+        <p>An Aspiring Software Engineer!</p>
       </div>
       <video src="home2.mp4" autoplay muted loop playsinline></video>
       <div class="overlay">    </div>
