add form function

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
       <h2>Phone #: 780-266-3808</h2>
       <div class="contact-form">
         <h2 class="form-heading">Or feel free to message me here!</h2>
-        <form>
-          <input class="name" type="text" placeholder="Name">
-          <input class="email" type="email" placeholder="Email">
-          <textarea class="message" type="text" placeholder="Your Message" rows="6"></textarea>
+        <form action="https://formsubmit.co/7d259b639cab8c82831776a55f11d5e1" method="POST">
+          <input class="name" name="name" type="text" placeholder="Name">
+          <input class="email" name="email" type="email" placeholder="Email">
+          <textarea class="message" name="message" type="text" placeholder="Your Message" rows="6"></textarea>
           <button type="submit" class="submit-button">SUBMIT</button>
         </form>
       </div>
