--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1 class="light-text">ABOUT ME</h1>
     <div class="about-container">
       <img src="imgs/headshot.jpg">
-      <p>Hello, my name is Michael. I am a 20-year-old developer from Canada. I am currently attending the University of Alberta, where I am pursuing a bachelor of science majoring in computer sciences and a minor in business. I have a passion for programming, especially web development. I have been learning front-end development; however, I plan to be a full-stack developer in the future.</p>
+      <p>Hello, my name is Michael. I am a 20-year-old developer from Canada. I am currently attending the University of Alberta, where I am pursuing a bachelor of science majoring in computer sciences and a minor in business. I have a passion for programming, especially in web development.</p>
       <div class="social-media">
         <a href="https://github.com/ItsMikeyy" target="_blank"><img class="social-media-icon" src="./imgs/github-icon.svg" alt="github icon"></a>
         <a href="./files/Resume - Michael Carey.pdf" download>Download my resume</a>
@@ -58,7 +58,7 @@
       <div class="project-content">
         <h1>Market Data</h1>
         <img src="./imgs/project1.png">
-        <p>A website that provides news on the markets as well as stock quotes and exchange rates for the day. Built with React, Express.js, and uses the Aplpha Vantage API.</p>
+        <p>A website that provides news on the markets as well as stock quotes and exchange rates (currently disabled) for the day. Built with React, Express.js, and uses the Alpha Vantage API.</p>
         <div class="project-links">
           <button type="button" class="link"><a href="https://marketdata-bf91a.web.app/" target="_blank">View Live</a></button>
           <button type="button" class="link"><a href="https://github.com/ItsMikeyy/Market-Api-Client" target="_blank">View On Github</a></button>
