--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>Hello, my name is Michael. I am a 20-year-old developer from Canada. I am currently attending the University of Alberta, where I am pursuing a bachelor of science majoring in computer sciences and a minor in business. I have a passion for programming, especially in web development.</p>
       <div class="social-media">
         <a href="https://github.com/ItsMikeyy" target="_blank"><img class="social-media-icon" src="./imgs/github-icon.svg" alt="github icon"></a>
-        <a href="./files/Resume - Michael Carey.pdf" download>Download my resume</a>
+        <a href="./files/RESUME - MICHAEL CAREY.pdf" target="_blank">Download my resume</a>
         <a href="https://www.linkedin.com/in/michael-carey-147455231/" target="_blank"><img class="social-media-icon" src="./imgs/linkedin-icon.svg" alt="linkedin icon"></a>
       </div>
     </div>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="project-content">
-        <h1>PasswordDB</h1>
+        <h1>Sorting Algorithms Visualized</h1>
         <img src="./imgs/project2.png">
         <p>This website provides an interactive visualization on various sorting algorthms. Currently the supported algorthms are: Quick Sort, Merge Sort, Bubble Sort and Selection Sort with plans to add more in the future!</p>
         <div class="project-links">
