--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>MICHAEL CAREY</h2>
         <p>An Aspiring Software Engineer!</p>
       </div>
-      <video src="home2.mp4" autoplay muted loop playsinline></video>
+      <video src="home.mp4" autoplay muted loop playsinline></video>
       <div class="overlay">    </div>
   </div>
 
