--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       </div>
 
       <div class="project-content">
-        <h1>Sorting Algorithms Visualized</h1>
+        <h1>Sorting + Path-Finding Algorithms Visualized</h1>
         <img src="./imgs/project2.png">
-        <p>This website provides an interactive visualization on various sorting algorthms. Currently the supported algorthms are: Quick Sort, Merge Sort, Bubble Sort and Selection Sort with plans to add more in the future!</p>
+        <p>This website provides an interactive visualization on various sorting and path-fidning algorithms rthms. Currently the supported sorting algorithms are: Quick Sort, Merge Sort, Bubble Sort and Selection Sort. The current path path-fidning algorithms are DFS and BFS with plans to add more in the future!</p>
         <div class="project-links">
-          <button type="button" class="link"><a href="https://itsmikeyy.github.io/SortingAlgorithmsVisualized/" target="_blank">View Live</a></button>
-          <button type="button" class="link"><a href="https://github.com/ItsMikeyy/SortingAlgorithmsVisualized/tree/master" target="_blank">View On Github</a></button>
+          <button type="button" class="link"><a href="https://itsmikeyy.github.io/PathFinding/index.html" target="_blank">View Live</a></button>
+          <button type="button" class="link"><a href="https://github.com/ItsMikeyy/PathFinding" target="_blank">View On Github</a></button>
         </div>
       </div>
 
