fix bugs and updated info

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <img src="imgs/headshot.jpg">
       <p>Hello, my name is Michael. I am a 20-year-old developer from Canada. I am currently attending the University of Alberta, where I am pursuing a bachelor of science majoring in computer sciences and a minor in business. I have a passion for Software Engineering and Data Analysis.</p>
       <div class="social-media">
-        <a href="https://github.com/ItsMikeyy" target="_blank"><img class="social-media-icon" src="./imgs/github-icon.svg" alt="github icon"></a>
-        <a href="./RESUME - MICHAEL CAREY.pdf" target="_blank">View my resume</a>
-        <a href="https://www.linkedin.com/in/michael-carey-147455231/" target="_blank"><img class="social-media-icon" src="./imgs/linkedin-icon.svg" alt="linkedin icon"></a>
+        <a href="https://github.com/ItsMikeyy" target="_blank" class="img-link"><img class="social-media-icon" src="./imgs/github-icon.svg" alt="github icon"></a>
+        <a href="./RESUME - MICHAEL CAREY.pdf" target="_blank" class="img-link">View my resume</a>
+        <a href="https://www.linkedin.com/in/michael-carey-147455231/" target="_blank" class="img-link"><img class="social-media-icon" src="./imgs/linkedin-icon.svg" alt="linkedin icon"></a>
       </div>
     </div>
   </div>
@@ -95,6 +95,17 @@
       </div>
 
       <div class="project-content">
+        <h1>What To Watch</h1>
+        <img src="./imgs/project4.png">
+        <p>Developed a full-stack application that retrieves a movie or TV show from IMDb based on the users selected categories. The app uses React for the interface, Flask for the back-end processing, requests and beautifulsoup4 to scrape IMDb.  </p>
+        <div class="project-links">
+          <button type="button" class="link"><a href="https://github.com/ItsMikeyy/WhatToWatch" target="_blank">View On Github</a></button>
+        </div>
+      </div>
+      
+      
+
+      <div class="project-content">
         <h1>Check-in Android App</h1>
         <p>During this project I lead a team of five in planning, designing, building, and implementing an app that allows users
           to sign up for and create events by scanning QR codes. This project used Figma to help plan and design the UI/UX for the app, Android Studio for coding, and
@@ -104,6 +115,7 @@
         </div>
       </div>
     </div>
+
   </div>
 
   <div id="contact" class="section dark-backgorund">
