--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1 class="light-text">ABOUT ME</h1>
     <div class="about-container">
       <img src="imgs/headshot.jpg">
-      <p>Hello, my name is Michael. I am a 20-year-old developer from Canada. I am currently attending the University of Alberta, where I am pursuing a bachelor of science majoring in computer sciences and a minor in business. I have a passion for Software Engineering and Data Analysis.</p>
+      <p>Hello, my name is Michael. I am a 23-year-old developer from Canada. I have recently graduated from the University of Alberta, where I pursued a bachelor of science majoring in computer sciences and a minor in business. I have a passion for Software Engineering and Data Analysis.</p>
       <div class="social-media">
         <a href="https://github.com/ItsMikeyy" target="_blank" class="img-link"><img class="social-media-icon" src="./imgs/github-icon.svg" alt="github icon"></a>
         <a href="./RESUME - MICHAEL CAREY.pdf" target="_blank" class="img-link">View my resume</a>
